TinyMUX 2.7:  CHANGES
Last Update:  December 2006

Major changes that may affect performance and require softcode tweaks:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 -- Placeholder.


Feature Additions:
~~~~~~~~~~~~~~~~~
 -- Support optional action list with @break.  Add corresponding
    @assert command. (Issue 36).


Bug Fixes:
~~~~~~~~~
 -- INFO should show 'Patches' or 'INFO 1', but not both (Issue 236).
 -- @dolist and @trig were not passing TRACE bit through (Issue 237).


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 -- Placeholder.


Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Placeholder.


Miscellaneous:
~~~~~~~~~~~~~
 -- Placeholder.