@@ -5,10 +5,7 @@
 
 #define  TOPIC_NAME_LEN     30
 
-typedef struct
-{
-  size_t pos;         /* index into help file */
-  size_t len;         /* length of help entry */
-  char topic[TOPIC_NAME_LEN + 1];   /* topic of help entry */
-} help_indx;
-
+void helpindex_clean(int);
+void helpindex_load(dbref);
+void helpindex_init(void);
+void help_helper(dbref executor, int iHelpfile, char *topic_arg, char *buff, char **bufc);
