@@ -10,17 +10,22 @@ Feature Additions:
 ~~~~~~~~~~~~~~~~~
  -- Support optional action list with @break.  Add corresponding
     @assert command. (Issue 36).
+ -- Help files support PennMUSH-style multiple topics for each help entry;
+    consecutive &FOO lines refer to the same content (Issue 238).
 
 
 Bug Fixes:
 ~~~~~~~~~
  -- INFO should show 'Patches' or 'INFO 1', but not both (Issue 236).
  -- @dolist and @trig were not passing TRACE bit through (Issue 237).
+ -- Using \ as a shortcut to @emit no longer causes the beginning of the
+    message to be escaped (Issue 219).
 
 
 Performance Enhancements:
 ~~~~~~~~~~~~~~~~~~~~~~~~
- -- Placeholder.
+ -- Help entries use less memory (specific improvements described in
+    Issue 238 comments).
 
 
 Cosmetic Changes:
@@ -30,4 +35,6 @@ Cosmetic Changes:
 
 Miscellaneous:
 ~~~~~~~~~~~~~
- -- Placeholder.
+ -- Documented Lbufref and Regref pools in 'wizhelp @list alloc'.
+ -- Documented use of a single backslash as a proper shortcut to
+    @emit (Issue 219).
